Adjusted css styling for all css files across site to ensure bgVideo always covers screen, using @media css

--- a/BeerQuest1/BeerQuest/wwwroot/css/SiteMember.css
+++ b/BeerQuest1/BeerQuest/wwwroot/css/SiteMember.css
@@ -24,7 +24,6 @@ textarea {
 }
 
 .body-content #bgVideo {
-    width: 100%;
     position: absolute;
     padding: 0;
     margin: 0;
@@ -35,6 +34,24 @@ textarea {
     min-height: 100%;
     min-width: 100%;
     pointer-events: none;
+}
+
+
+@media (min-width: 1284px) {
+
+    .body-content #bgVideo {
+        width: 100%;
+        position: absolute;
+        padding: 0;
+        margin: 0;
+        left: 0px;
+        bottom: 0px;
+        z-index: -1000;
+        overflow: hidden;
+        min-height: 100%;
+        min-width: 100%;
+        pointer-events: none;
+    }
 }
 
 .navbar-inverse {
