--- a/BeerQuest1/BeerQuest/wwwroot/css/siteBusiness.css
+++ b/BeerQuest1/BeerQuest/wwwroot/css/siteBusiness.css
@@ -24,7 +24,6 @@ textarea {
 }
 
 .body-content #bgVideo {
-    height: 100%;
     position: absolute;
     padding: 0;
     margin: 0;
@@ -38,7 +37,7 @@ textarea {
 }
 
 
-@media (min-width: 1200px) {
+@media (min-width: 1284px) {
     
     .body-content #bgVideo {
         width: 100%;
